Add appendix for user study

--- a/study/study.tex
+++ b/study/study.tex
@@ -20,7 +20,7 @@ In this project, there were two areas where user studies could have been require
 \namedsection{First User Study}{Finch}
 The first area of the user study was performed to collect movement data to train the algorithm. Specifically, accelerometer and gyroscope sensor data was required to be collected so that the effectiveness of the two at training the algorithm and accurately classifying exercises could be compared.
 
-Appendix \todo{REF} shows the plan for the data gathering sessions along with instructions on what should be done for each participant.
+Appendix \ref{app:participant} shows the plan for the data gathering sessions along with instructions on what should be done for each participant.
 
 \subsection{Recording Device}
 At this stage in the project, the prototype device was not yet ready to be used to record the movement data so a mobile phone with inbuilt accelerometer and gyroscope sensor was used instead. The Physics Toolbox Suite Version 1.4.4 App \cite{vieyra2016} was used to record data directly from the phones sensors by allowing us to choose which sensors to use.
