--- a/report.tex
+++ b/report.tex
@@ -105,6 +105,7 @@
 	\input{appendices/source}
 	\input{appendices/risks}
 	\input{appendices/gantt}
+	\input{appendices/data_gathering}
 	%
 	\backmatter
 	\bibliographystyle{.style/IEEEtran}
