Make user study gnuplot image bigger

--- a/study/study.tex
+++ b/study/study.tex
@@ -56,7 +56,7 @@ As discussed in section \ref{sec:tools}, three separate classification classes w
 
 \begin{figure}
 	\centering
-	\includegraphics[width=70mm]{figures/classification_data_plot.png}
+	\includegraphics[width=1.0\textwidth]{figures/classification_data_plot.png}
 	\caption{Gnuplot of accelerometer data for an anticlockwise revolver exercise\label{fig:gnuplot-rev}}
 \end{figure}
 
