--- a/report.tex
+++ b/report.tex
@@ -83,9 +83,15 @@
 
 	% Software chapter
 	\input{research/research}
+	
+	% Device Emulation
+	\input{emulation/emulation}
+	
+	% Embedded?
+	\input{embedded/embedded}
 
 	% Hardware chapter
-	\input{hardware/hardware}
+	%\input{hardware/hardware}
 
 	% Software chapter
 	\input{software/software}
