--- a/research/components.tex
+++ b/research/components.tex
@@ -1,4 +1,4 @@
-\namedsection{Component Research}{Pasat}
+\namedsection{Components}{Pasat}
 This section discusses the extensive analysis our team took in order to choose the most optimum and efficient components available on the market. The first step took before choosing suitable components for our design was the research on what sensors could be useful in detecting the type of movements described earlier in this project. The initial sensors our team agreed on were accelerometers, gyroscopes and altimeters, taking into consideration the possibility that it would detect if the user is aboard an aircraft or not.
 \begin{table}[h]
 	\centering
