--- a/research/research.tex
+++ b/research/research.tex
@@ -1,5 +1,6 @@
 \chapter{Research and Algorithm Design}
 
+\input{research/components}
 \input{research/exercise-detection}
 \input{research/machine-learning}
 \input{research/heuristics}
