Added Algorithm Accuracy section

--- a/results/algorithm.tex
+++ b/results/algorithm.tex
@@ -1,2 +1,7 @@
-\namedsection{Algorithm Accuracy \label{sec:alg-accuracy}}{Someone}
+\namedsection{Algorithm Accuracy \label{sec:alg-accuracy}}{Shepherd}
 
+As discussed above, the team was not able to complete a second user study on the device, which means a detailed analysis of the accuracy of the algorithm may not be possible. Instead, the group have used their own members to experiment with the device; although this sample size is smaller than ideal, and as such any results may not be particularly statistically significant, the group felt this would provide a suitable proof of concept, and a good data point on which to base future work.
+
+The team's early tests showed that the device is able to correctly identify a movement as exercise when the device was rotated in speed and fashion in accordance with the specifications. However, some team members found the device harder to use than others, suggesting that it may be too well trained to the `perfect' form of exercise. Should the device be developed further, it may aid its usability to address this drawback.
+
+We have found that the device's ability to ignore false positives is reassuringly high; to test this, members wore the sensor both during `random' foot movements, and during walking, neither yielding sustained exercise classifications. When exercise was detected incorrectly, this tended to be for short instants, making the liklihood of confusing an end user very low. The short time associated with misclassifcations could also be used as a factor for more advanced heuristics to be added in the future, rather than requiring substancial amendments to the underlying classification code or model.
