Splits FPGA section?

--- a/embedded/embedded.tex
+++ b/embedded/embedded.tex
@@ -1,6 +1,7 @@
 \chapter{Embedded Development}
 
 \input{embedded/initialdesign}
+\input{embedded/fpga}
 \input{embedded/mbed}
 \input{embedded/sensor}
 \input{embedded/finaldesign}
