--- a/embedded/mbed.tex
+++ b/embedded/mbed.tex
@@ -1,12 +1,10 @@
 \namedsection{mBed}{Gupta}
 
-\note{Go through all tables and add references where required}
-
 \subsection{I2C Communication}
 
 \subsubsection{Sensor library}
 
-The sensor used in this project, the MPU6050 within a Xadow board, has an online library available \cite{sensory_library}. It contains two separate classes, one called I2Cdev and the other MPU6050. 
+The \todo{Go through all tables and add references where required} sensor used in this project, the MPU6050 within a Xadow board, has an online library available \cite{sensory_library}. It contains two separate classes, one called I2Cdev and the other MPU6050. 
 
 The I2Cdev class contains an interface to the processors I2C class expanding its functionality and allowing for more abstract functions for the MPU6050 class. For example, functionality for reading or writing multiple bytes or words were implemented within this class.
 
@@ -123,9 +121,7 @@ Using this information, the required registers are set to enable Serial communic
 
 \subsection{Getting Sensor Data}
 
-\note{Should this be moved to the I2C subsection?}
-
-With the sensor libraries re-written to be compatible with the ARM libraries, the sensor can be interfaced with the mBed. Upon the sensor, all pins used were on Junction 4. This pins connected between the mBed and sensor were the data line, pins 28 and 3 respectively, as well as the clock line, pins 27 and 2 respectively. These pins were also connected to pull-up resistors with values of 2.2k\ohm. Power was also supplied to the sensor from the mBed from its 3.3V Regulated Output which went to pin 1 of the sensor along with a common ground between the Ground pin of the mBed and pin 6 of the sensor. 
+With \todo{Should this be moved to the I2C subsection?} the sensor libraries re-written to be compatible with the ARM libraries, the sensor can be interfaced with the mBed. Upon the sensor, all pins used were on Junction 4. This pins connected between the mBed and sensor were the data line, pins 28 and 3 respectively, as well as the clock line, pins 27 and 2 respectively. These pins were also connected to pull-up resistors with values of 2.2k\ohm. Power was also supplied to the sensor from the mBed from its 3.3V Regulated Output which went to pin 1 of the sensor along with a common ground between the Ground pin of the mBed and pin 6 of the sensor. 
 
 Once done, it was possible to extract sensor readings from the device, depending on what data is required a variety of different functions from the library can be used.
 
