--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -2,13 +2,13 @@
 
 Ultra-Low Power Processors, such as ARM's Cortex-M0+, are becoming an increasingly appealing area of research, particularly because they provide a platform for the Internet of Things. As our culture develops new ways for technology to aid our every-day lives, the devices which support these progressions are required to be less and less intrusive, forcing companies to search for new methods of making systems smaller and require lower power, especially as ``essentially all IoT sensor nodes will be powered by small batteries and to a lesser extent by energy harvesting'' \cite{iot_power}.
 
-However, such processors clearly create very tight constraints for potential developers, as processing power is often limited, leading to the ever-continuing requirement for more eﬃcient and optimised algorithms. As memory usage is also proportional to power consumption, the RAM available on such systems is extremely limiting. As we begin to rely on these systems more and more, these constraints make it a growing challenge to implement systems which are not only useful, but can be relied upon to function when needed. This is particularly important in cases in which a device is being used for safety-critical operations, which is becoming increasingly common \cite{iot_saftey} \cite{iot_saftey2}.
+However, such processors clearly create very tight constraints for potential developers, as processing power is often limited, leading to the ever-continuing requirement for more efficient and optimised algorithms. As memory usage is also proportional to power consumption, the RAM available on such systems is extremely limiting. As we begin to rely on these systems more and more, these constraints make it a growing challenge to implement systems which are not only useful, but can be relied upon to function when needed. This is particularly important in cases in which a device is being used for safety-critical operations, which is becoming increasingly common \cite{iot_saftey} \cite{iot_saftey2}.
 
 ARM is currently investigating the concept of a sub threshold Cortex-M0+ \cite{arm_sub}, which attempts to push the extremes of these constraints further by providing just 8 kB of memory for both program code and data, and running at just a few hundred kHz. This project aims to research and develop an algorithm which is capable of running on such a device, to act as a proof of concept that such a processor would be worthwhile.
 
 \namedsection{Project Overview}{Finch}
 
-The particular algorithm that is to be developed is a way to identify and monitor exercises performed by a human wearer. These are speciﬁcally exercises which can be done on aeroplanes to reduce the risk of suﬀering from Deep Vein Thrombosis, a condition where a blood clot can form in one of the deep veins in the body, most commonly the legs. This can lead to further complications such as pulmonary embolism which occurs when part of the blood clot moves and blocks a blood vessel in the lungs \cite{dvt}. Long-haul ﬂights can increase the risk of getting DVT because of the long periods of time sitting down and not moving which reduces circulation in the legs.
+The particular algorithm that is to be developed is a way to identify and monitor exercises performed by a human wearer. These are specifically exercises which can be done on aeroplanes to reduce the risk of suffering from Deep Vein Thrombosis, a condition where a blood clot can form in one of the deep veins in the body, most commonly the legs. This can lead to further complications such as pulmonary embolism which occurs when part of the blood clot moves and blocks a blood vessel in the lungs \cite{dvt}. Long-haul flights can increase the risk of getting DVT because of the long periods of time sitting down and not moving which reduces circulation in the legs.
 
 \begin{figure}[h]
   \centering
@@ -17,9 +17,9 @@ The particular algorithm that is to be developed is a way to identify and monito
   \label{fig:exercises}
 \end{figure}
 
-Figure \ref{fig:exercises} shows some of the in-ﬂight exercises which can be performed. We have looked into a few of them including the revolver, the ballerina and the shrug. These involve lifting both feet oﬀ the ﬂoor and rotating them in circles in clockwise and anticlockwise directions, pointing the feet up and down and rolling the shoulders backwards and forwards. These are all designed to help keep the circulation going in the limbs. However, a speciﬁc focus was made to the revolver exercise for the purpose of prototyping a system.
+Figure \ref{fig:exercises} shows some of the in-flight exercises which can be performed. We have looked into a few of them including the revolver, the ballerina and the shrug. These involve lifting both feet off the floor and rotating them in circles in clockwise and anticlockwise directions, pointing the feet up and down and rolling the shoulders backwards and forwards. These are all designed to help keep the circulation going in the limbs. However, a specific focus was made to the revolver exercise for the purpose of prototyping a system.
 
-Possible uses of the algorithm would be to incorporate it into a device which could be given to passengers to strap to their legs. It would then monitor how much exercise each person was doing. This could help inform the passengers whether or not they are doing enough exercise to stay risk free. The device itself could make use of energy effcient technologies (for example the Cortex-M0+) so that its battery could easily last the entire duration of a long-haul fight.
+Possible uses of the algorithm would be to incorporate it into a device which could be given to passengers to strap to their legs. It would then monitor how much exercise each person was doing. This could help inform the passengers whether or not they are doing enough exercise to stay risk free. The device itself could make use of energy efficient technologies (for example the Cortex-M0+) so that its battery could easily last the entire duration of a long-haul fight.
 
 \namedsection{Project Requirements }{Finch \& Shepherd}
 
@@ -27,13 +27,13 @@ The main requirement of this project is to develop an algorithm which is capable
 
 Additionally, 8 kB is imposed as the memory limit for both program code and data in order for the algorithm to be capable of running on the sub threshold Cortex-M0+. Again, the lower this can be the better as it opens up the possibility for the system to require even less power.
 
-As the proposed sub threshold Cortex-M0+ is still in development, it is not readily available for the group to use; consequently, the team will be required to investigate alternatives to emulate the processor. These alternatives must allow the clock speeds to be adjusted based on the eﬃciency and requirements of the algorithm. The challenges involved in this are discussed in the hardware chapter of this report.
+As the proposed sub threshold Cortex-M0+ is still in development, it is not readily available for the group to use; consequently, the team will be required to investigate alternatives to emulate the processor. These alternatives must allow the clock speeds to be adjusted based on the efficiency and requirements of the algorithm. The challenges involved in this are discussed in the hardware chapter of this report.
 
-Research and analysis of the algorithms used for exercise detection which currently exist, speciﬁcally focusing on Machine Learning techniques, must also be carried out. On top of this, an investigation into the tools and techniques which can be used, along with the methods by which the eﬀectiveness of trained algorithms can be evaluated is also necessary. This is documented in the research and design section of the report.
+Research and analysis of the algorithms used for exercise detection which currently exist, specifically focusing on Machine Learning techniques, must also be carried out. On top of this, an investigation into the tools and techniques which can be used, along with the methods by which the effectiveness of trained algorithms can be evaluated is also necessary. This is documented in the research and design section of the report.
 
 Following on from this, the ways in which the algorithm can be optimised to run on a such constrained system must also be explored. The way this was done is examined in the software development chapter.
 
-Another requirement of the project is to perform a user study to collect movement data of the exercises which can be used to develop the algorithm. This is so that a range of data from a selection of diﬀerent people can be used because each individual is likely to perform the exercises with slight variations. The details of this can be found in the user study chapter.
+Another requirement of the project is to perform a user study to collect movement data of the exercises which can be used to develop the algorithm. This is so that a range of data from a selection of different people can be used because each individual is likely to perform the exercises with slight variations. The details of this can be found in the user study chapter.
 
 Finally, the accuracy of the developed algorithm must be calculated. The specifics of this are outlined in the results chapter.
 Below, the requirements of this project are given in explicit detail.
