Added a small conclusion stub

--- a/conclusion/conclusion.tex
+++ b/conclusion/conclusion.tex
@@ -1,3 +1,5 @@
 \chapter{Conclusion}
 
-We showed it to Donald Trump and he loved it!
+The algorithm that the team developed is successful at providing a proof of concept that there is scope to run complex code on a system matching the specification of ARM's new sub threshold Cortex M0+ processor. With such low power memory usage, this project has proved that devices with extremely high constraints may still be relied upon for important functions.
+
+The team is satisfied that they acted effectively as a group, particularly in respect to separating tasks in a sensible mannar. The communication between members was very strong, in part because the morale between the individuals. 
