--- a/research/components.tex
+++ b/research/components.tex
@@ -21,7 +21,7 @@ This section discusses the extensive analysis our team took in order to choose t
 	\label{table: componentsx}
 \end{table}
 
-The main criteria on which we asserted the best component our design would need were: the working voltage, the current consumption, mounting type and if it was a multi-sensor component. In table \ref{table: componentsx}, our top five selected components for this project can be seen. Each have advantages and disadvantages over the others, but only one of them can be used. Even i some of the sensors have a lower supply voltage and both sensors present, the fact that they are surface mount complicates the project too much, so the mounting type became the main selecting criteria. Only two of the proposed components have this type of mounting, but one of them does not contain both sensors.
+The main criteria on which we asserted the best component our design would need were: the working voltage, the current consumption, mounting type and if it was a multi-sensor component. In table \ref{table: componentsx}, our top five selected components for this project can be seen. Each have advantages and disadvantages over the others, but only one of them can be used. Even if some of the sensors have a lower supply voltage and both sensors present, the fact that they are surface mount complicates the project too much, so the mounting type became the main selecting criteria. Only two of the proposed components have this type of mounting, but one of them does not contain both sensors.
 
 \begin{figure}
 \centering
